@startuml
title Check Ticket Availability - Model Class Diagram

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 0
skinparam dpi 170
skinparam defaultFontName Arial
skinparam classFontName Arial
skinparam classAttributeFontName Consolas
skinparam classAttributeIconSize 0
skinparam classBorderColor #263238
skinparam classBackgroundColor #FAFCFD
skinparam classHeaderBackgroundColor #DCEEF8
skinparam ArrowColor #263238
skinparam ArrowThickness 1.2
skinparam linetype ortho
skinparam nodesep 160
skinparam ranksep 140
hide circle

class Attraction <<model>> {
  -id: String {UUID}
  -partnerId: String
  -title: String
  -status: AttractionStatus = DRAFT
  -publicationStatus: AttractionPublicationStatus = PAUSED
  --
  +isPublished(): Boolean
}

class DailyStock <<model>> {
  -id: String {UUID}
  -ticketProductId: String
  -capacity: Int
  -date: DateTime
  --
  +hasAvailable(quantity: Int): Boolean
  +remaining(): Int
}

class AttractionDailyStock <<model>> {
  -id: String {UUID}
  -attractionId: String
  -capacity: Int
  -date: DateTime
  --
  +hasAvailable(quantity: Int): Boolean
  +remaining(): Int
}

class TimeSlotStock <<model>> {
  -id: String {UUID}
  -timeSlotId: String
  -bookedQty: Int = 0
  -date: DateTime
  --
  +hasAvailable(quantity: Int): Boolean
  +remaining(): Int
}

class TicketProduct <<model>> {
  -id: String {UUID}
  -attractionId: String
  -name: String
  -type: TicketType = ADULT
  --
  +isOnSale(): Boolean
}

class TimeSlot <<model>> {
  -id: String {UUID}
  -ticketProductId: String [0..1]
  -attractionId: String [0..1]
  -startTime: String
  -isActive: Boolean = true
  --
  +isActive(): Boolean
}

class SpecialDate <<model>> {
  -id: String {UUID}
  -attractionId: String
  -capacity: Int [0..1]
  -date: DateTime
  --
  +isClosed(): Boolean
}

TicketProduct "1" *-- "0..*" DailyStock : dailyStocks
Attraction "1" *-- "0..*" AttractionDailyStock : dailyStocks
TimeSlot "1" *-- "0..*" TimeSlotStock : timeSlotStocks
Attraction "1" *-- "0..*" TicketProduct : ticketProducts
TicketProduct "0..1" *-- "0..*" TimeSlot : timeSlots
Attraction "0..1" -- "0..*" TimeSlot : timeSlots
Attraction "1" *-- "0..*" SpecialDate : specialDates

@enduml
